# rover_volkani

./: .gitignore  run_indoor_experiments.py
install/: local_setup.sh  setup.sh
install/bno055/share/bno055/: package.sh  package.xml
install/bno055/share/bno055/config/: bno055_params.yaml  bno055_params_i2c.yaml  bno055_params_test.yaml
install/bno055/share/bno055/launch/: bno055.launch.py
install/greenhouse_navigation/lib/greenhouse_navigation/: navigator
install/greenhouse_navigation/share/greenhouse_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/roverrobotics_description/share/roverrobotics_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/roverrobotics_description/share/roverrobotics_description/cmake/: roverrobotics_descriptionConfig-version.cmake  roverrobotics_descriptionConfig.cmake
install/roverrobotics_description/share/roverrobotics_description/environment/: ament_prefix_path.dsv  path.dsv
install/roverrobotics_description/share/roverrobotics_description/launch/: display_2wd_rover.launch.py  display_4wd_rover.launch.py  display_flipper.launch.py  display_max.launch.py  display_mini.launch.py  display_miti.launch.py  display_miti_65.launch.py  experiments_launch.py  spawn_rover.launch.py  test_world_only.launch.py
install/roverrobotics_description/share/roverrobotics_description/meshes/: 65wheels.dae  BNO055.stl  castor.dae  castor_housing.dae  flipper.dae  flipper_chassis.dae  flipper_track.dae  hub_10in.dae  hub_6.5in.dae  max_chassis.dae  max_wheels_10in.dae  max_wheels_13in.dae  max_wheels_15in.dae  mini_chassis.dae  mini_chassis_new.dae  miti_chassis.dae  miti_chassis_new.dae  pro_tire.dae  rover_2wd_core.dae  rover_payload.dae  rplidar_s2.dae
install/roverrobotics_description/share/roverrobotics_description/rviz/: imu_testing.rviz  urdf.rviz
install/roverrobotics_description/share/roverrobotics_description/urdf/: flipper.urdf  max.urdf  max_100.urdf  max_130.urdf  max_150.urdf  max_65.urdf  mini.urdf  miti.urdf  miti_65.urdf  rover_2wd.urdf  rover_4wd.urdf
install/roverrobotics_driver/lib/roverrobotics_driver/: greenhouse_experiment_node  roverrobotics_driver
install/roverrobotics_driver/share/roverrobotics_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/roverrobotics_driver/share/roverrobotics_driver/cmake/: roverrobotics_driverConfig-version.cmake  roverrobotics_driverConfig.cmake
install/roverrobotics_driver/share/roverrobotics_driver/config/: accessories.yaml  localization_ekf.yaml  localization_outdoor_ekf.yaml  max_100_config.yaml  (+15 more)
install/roverrobotics_gazebo/share/roverrobotics_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/roverrobotics_input_manager/lib/roverrobotics_input_manager/: joys_manager.py
install/roverrobotics_input_manager/share/roverrobotics_input_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
rosbag2_2025_06_09-20_44_35/: metadata.yaml
src/: README.md
src/experiment_manager/: README.md  package.xml  setup.cfg  setup.py
src/experiment_manager/experiment_manager/: experiment_manager_node.py
src/experiment_manager/resource/: experiment_manager
src/experiment_monitor/: package.xml  setup.cfg  setup.py
src/experiment_monitor/experiment_monitor/: experiment_monitor.py  experiment_monitor_backup.py
src/greenhouse_navigation/: package.xml  setup.cfg  setup.py
src/greenhouse_navigation/greenhouse_navigation/: greenhouse_navigator.py
src/roverrobotics_description/launch/: spawn_rover.launch.py
src/roverrobotics_description/meshes/: BNO055.stl
src/roverrobotics_description/rviz/: urdf.rviz
src/roverrobotics_description/urdf/: rover_2wd.urdf
src/roverrobotics_description/urdf/accessories/: frames_2025-04-29_10.36.39.gv  imu.urdf  realsense_camera.urdf  rgbd_camera.urdf.xacro  rplidar_s2.urdf
src/roverrobotics_driver/: CMakeLists.txt
src/roverrobotics_driver/config/: accessories.yaml  accessories_no_imu.yaml  localization_ekf_no_imu.yaml  nav2_params.yaml
src/roverrobotics_driver/config/indoor_configs/: plants.yaml
src/roverrobotics_driver/config/rviz_configs/: custom_slam.rviz
src/roverrobotics_driver/config/slam_configs/: mapper_params_localization.yaml  mapper_params_online_async.yaml
src/roverrobotics_driver/include/: roverrobotics_ros2_driver.hpp
src/roverrobotics_driver/launch/: accessories.launch.py  experiments_launch.py  greenhouse_nav.launch.py  greenhouse_nav_amcl.launch.py  navigation_launch.py  navigation_launch_indoor.py  navigation_launch_indoor_backup.py  robot_localizer.launch.py  zero.launch_backup.py
src/roverrobotics_driver/maps/: greenhouse_map.pgm  greenhouse_map.yaml  indoor_abc_lab.pgm  indoor_abc_lab.yaml  indoor_abc_lab2.pgm  indoor_abc_lab2.yaml  indoor_abc_lab3.pgm  indoor_abc_lab3.yaml  indoor_abc_lab_sim.data  indoor_abc_lab_sim.pgm  indoor_abc_lab_sim.yaml  my_map.pgm  my_map.yaml
src/roverrobotics_driver/src/: greenhouse_experiment_node.cpp  roverrobotics_ros2_driver.cpp
src/roverrobotics_gazebo/: CMakeLists.txt
src/roverrobotics_gazebo/launch/: 2wd_rover_gazebo.launch.py  2wd_rover_indoor_lab.launch.py
src/roverrobotics_gazebo/models/map/: model.config  model.sdf
src/roverrobotics_gazebo/worlds/: indoor_lab_world_walled.sdf
(+138 files in other folders)
